footer stuck to bottom, background now fixed

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -9,13 +9,10 @@
 	padding: 0;
 }
 
-html {
-	min-height: 100vh;
-}
-
-body {
+html, body {
 	margin: 0;
 	padding: 0;
+	height: 100%;
 }
 
 .page-content {
@@ -23,6 +20,7 @@ body {
 	margin: 16px;
 	padding: 16px;
 	margin-bottom: 200px;
+	flex: 1;
 }
 
 .page-content h1 {
